vm/snapshots/primitives-integer-arithmetic_ok-IntArithmeticOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
All assertions passed.
----- STDERR -----
