vm/snapshots/primitives-integer-zero_modulo-IntZeroModuloShouldThrowErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
----- STDOUT -----

----- STDERR -----
java.lang.ArithmeticException: / by zero
	at primitives.integer.zero_modulo.IntZeroModuloShouldThrowErrMain.main(IntZeroModuloShouldThrowErrMain.java:5)
