vm/snapshots/primitives-ints-arithmetic-comprehensive-ArithmeticOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
All assertions passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
All assertions passed.
----- STDERR -----
