vm/snapshots/primitives-longs-errors-modulo_by_zero-ModuloByZeroErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArithmeticException: / by zero
	at primitives.longs.errors.modulo_by_zero.ModuloByZeroErrMain.main(ModuloByZeroErrMain.java:5)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArithmeticException: / by zero
	at primitives.longs.errors.modulo_by_zero.ModuloByZeroErrMain.main(ModuloByZeroErrMain.java:5)
